--- a/sample/modules/service-tiles-empty.html
+++ b/sample/modules/service-tiles-empty.html
@@ -4,13 +4,7 @@
     </div>
 </div>
 
-<div tabindex="0" class="service-tile" data-tile-id="panel-2" style="background-image:url(/sample/images/service-tiles/service-find-job.jpg); background-size: cover;">
-    <div class="teaser">
-        <h4 class="title">Find a Job</h4>
-    </div>
-</div>
-
-<div tabindex="0" class="service-tile service-tile-empty half" data-url="/" style="background-image:url(/sample/images/background_6.jpg); background-size: cover;" >
+<div tabindex="0" class="service-tile service-tile-empty third" data-url="/" style="background-image:url(/sample/images/background_6.jpg); background-size: cover;">
     <span class="ca-gov-icon-gears"></span>
     <div class="teaser">
         <h4 class="title">Find More State Services</h4>
@@ -19,148 +13,97 @@
 
 
 <!-- END TILES -->
-
 <!-- BEGIN PANELS -->
-<div class="service-tile-panel" data-tile-id="fakeid" >
-        <div class="section section-default">
-            <div class="container">
-                <div class="card card-block">
-                    <button type="button" class="close btn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <div class="group">
-                        <div class="two-thirds">
-                            <h1 class="m-y-0 ">Find a Traffic School</h1>
-                            <p class="lead"><a href="">Department of Motor Vehicles (DMV)</a></p>
-
-                            <div class="btn-row m-b">
-                                <a href="/service-profile.html" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-info"></span> See Details</a>
-                                <a href="/service-profile.html#locations-near-you" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-location"></span> Locations Near You</a>
-                                <a href="/service-profile.html#frequently-asked-questions" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-question"></span> FAQ's</a>
-                            </div>
-
-                            <div class="location" itemscope itemtype="http://schema.org/Organization">
-                                <meta itemprop="name" content="Organization Name Here">
-                                <p class="other">
-                                    General Information: <span itemprop="telephone">(916)323-5400</span><br>
-                                    Hearing Impaired: <span itemprop="telephone">(916)323-5400</span><br>
-                                    Fax <span itemprop="faxNumber">(916)323-5400</span><br>
-                                </p>
-                            </div>
-
-                            <div class="related-services m-t btn-row">
-                                <a href="" class="btn btn-default btn-xs">Renew Driver License</a>
-                                <a href="" class="btn btn-default btn-xs">Renew Vehicle Registration</a>
-                                <a href="" class="btn btn-default btn-xs">Release of Liability</a>
-                                <a href="" class="btn btn-default btn-xs">Name Change</a>
-                            </div>
-
-                            <ul class="list-inline list-unstyled m-t-md social">
-                                <li class="list-inline-item"><a href="" aria-label="DMV Twitter link"><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter (DMV)</span></span></a></li>
-                                <li class="list-inline-item"><a href="" aria-label="DMV Facebook link"><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook (DMV)</span></span></a></li>
-                                <li class="list-inline-item"><a href="" aria-label="DMV Google Plus link"><span class="ca-gov-icon-google-plus" ><span class="sr-only">Google+ (DMV)</span></span></a></li>
-                            </ul>
-                        </div>
-
-                        <div class="third text-center">
-                            <img src="/sample/images/logo-dmv.png" class="img-responsive m-t-md hidden-xs" alt="Department of Motor Vehicles">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-</div>
-
-<!-- BEGIN PANEL 2 -->
-
-<div class="service-tile-panel" data-tile-id="panel-2">
+<div class="service-tile-panel" data-tile-id="fakeid">
     <div class="section section-default">
         <div class="container">
             <div class="card card-block">
                 <button type="button" class="close btn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="group">
-
                     <div class="two-thirds">
-                        <h1 class="m-y-0 ">Find a Job</h1>
-                        <p class="lead"><a href="https://calcareers.ca.gov/">California Department of Human Resources (CalHR)</a></p>
+                        <h1 class="m-y-0 ">Find a Traffic School</h1>
+                        <p class="lead"><a href="">Department of Motor Vehicles (DMV)</a></p>
 
                         <div class="btn-row m-b">
-                            <a href="/profile-landing.html" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-info"></span> See Details</a>
-                            <a href="/profile-landing.html#locations-near-you" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-location"></span> Locations Near You</a>
-                            <a href="/profile-landing.html#frequently-asked-questions" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-question"></span> FAQ's</a>
+                            <a href="/service-profile.html" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-info"></span> See Details</a>
+                            <a href="/service-profile.html#locations-near-you" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-location"></span> Locations Near You</a>
+                            <a href="/service-profile.html#frequently-asked-questions" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-question"></span> FAQ's</a>
                         </div>
 
                         <div class="location" itemscope itemtype="http://schema.org/Organization">
                             <meta itemprop="name" content="Organization Name Here">
                             <p class="other">
-                                General Information: <span itemprop="telephone">(866) 844-8671</span><br>
-                                Enail: <span itemprop="email">CalCareer@calhr.ca.gov</span><br>
+                                General Information: <span itemprop="telephone">(916)323-5400</span><br>
+                                Hearing Impaired: <span itemprop="telephone">(916)323-5400</span><br>
+                                Fax <span itemprop="faxNumber">(916)323-5400</span><br>
                             </p>
                         </div>
 
                         <div class="related-services m-t btn-row">
-                            <a href="" class="btn btn-default btn-xs">How to Apply for a State Job</a>
-                            <a href="" class="btn btn-default btn-xs">Advanced Job Search</a>
-                            <a href="" class="btn btn-default btn-xs">Exam / Assessment Search</a>
+                            <a href="" class="btn btn-default btn-xs">Renew Driver License</a>
+                            <a href="" class="btn btn-default btn-xs">Renew Vehicle Registration</a>
+                            <a href="" class="btn btn-default btn-xs">Release of Liability</a>
+                            <a href="" class="btn btn-default btn-xs">Name Change</a>
                         </div>
 
                         <ul class="list-inline list-unstyled m-t-md social">
-                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Twitter"><span class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter CalHR</span></span></a></li>
-                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Facebook"><span class="ca-gov-icon-facebook" aria-hidden="true"><span class="sr-only">Facebook CalHR</span></span></a></li>
-                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Google plus"><span class="ca-gov-icon-google-plus" aria-hidden="true"><span class="sr-only">Google+ CalHR</span></span></a></li>
+                            <li><a href=""><span class="ca-gov-icon-twitter"><span class="sr-only">DMV Twitter</span></span></a></li>
+                            <li><a href=""><span class="ca-gov-icon-facebook"><span class="sr-only">DMV Facebook</span></span></a></li>
+                            <li><a href=""><span class="ca-gov-icon-google-plus"><span class="sr-only">DMV Google+</span></span></a></li>
                         </ul>
                     </div>
 
                     <div class="third text-center">
-                        <img src="/sample/images/logo-calhr.png" class="img-responsive m-t-md" alt="Department of Motor Vehicles">
+                        <img src="/sample/images/logo-dmv.png" class="img-responsive m-t-md hidden-xs" alt="Department of Motor Vehicles">
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div class="service-tile-panel" data-tile-id="2">
+    <div class="section section-default">
+        <div class="container" style="visibility:hidden;">
+            <div class="card card-block">
+                <div class="group">
+                    <div class="two-thirds">
+                        <h1 class="m-y-0 ">Find a Traffic School</h1>
+                        <p class="lead"><a href="">Department of Motor Vehicles (DMV)</a></p>
 
-<div class="service-tile-panel" data-tile-id="2" >
-        <div class="section section-default">
-            <div class="container" style="visibility:hidden;">
-                <div class="card card-block">
-                    <div class="group">
-                        <div class="two-thirds">
-                            <h1 class="m-y-0 ">Find a Traffic School</h1>
-                            <p class="lead"><a href="">Department of Motor Vehicles (DMV)</a></p>
-
-                            <div class="btn-row m-b">
-                                <a href="/service-profile.html" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-info"></span> See Details</a>
-                                <a href="/service-profile.html#locations-near-you" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-location"></span> Locations Near You</a>
-                                <a href="/service-profile.html#frequently-asked-questions" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-question"></span> FAQ's</a>
-                            </div>
-
-                            <div class="location" itemscope itemtype="http://schema.org/Organization">
-                                <meta itemprop="name" content="Organization Name Here">
-                                <p class="other">
-                                    General Information: <span itemprop="telephone">(916)323-5400</span><br>
-                                    Hearing Impaired: <span itemprop="telephone">(916)323-5400</span><br>
-                                    Fax <span itemprop="faxNumber">(916)323-5400</span><br>
-                                </p>
-                            </div>
-
-                            <div class="related-services m-t btn-row">
-                                <a href="" class="btn btn-default btn-xs">Renew Driver License</a>
-                                <a href="" class="btn btn-default btn-xs">Renew Vehicle Registration</a>
-                                <a href="" class="btn btn-default btn-xs">Release of Liability</a>
-                                <a href="" class="btn btn-default btn-xs">Name Change</a>
-                            </div>
-
-                            <ul class="list-inline list-unstyled m-t-md social">
-                                <li class="list-inline-item"><a href="#" aria-label="DMV Twitter"><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter DMV</span></span></a></li>
-                                <li class="list-inline-item"><a href="#" aria-label="DMV Facebook"><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook DMV</span></span></a></li>
-                                <li class="list-inline-item"><a href="#" aria-label="DMV Google plus"><span class="ca-gov-icon-google-plus"><span class="sr-only">Google+ DMV</span></span></a></li>
-                            </ul>
+                        <div class="btn-row m-b">
+                            <a href="/service-profile.html" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-info"></span> See Details</a>
+                            <a href="/service-profile.html#locations-near-you" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-location"></span> Locations Near You</a>
+                            <a href="/service-profile.html#frequently-asked-questions" class="btn btn-default btn-block-xs"><span class="ca-gov-icon-question"></span> FAQ's</a>
                         </div>
 
-                        <div class="third text-center">
-                            <img src="/sample/images/logo-dmv.png" class="img-responsive m-t-md" alt="Department of Motor Vehicles">
+                        <div class="location" itemscope itemtype="http://schema.org/Organization">
+                            <meta itemprop="name" content="Organization Name Here">
+                            <p class="other">
+                                General Information: <span itemprop="telephone">(916)323-5400</span><br>
+                                Hearing Impaired: <span itemprop="telephone">(916)323-5400</span><br>
+                                Fax <span itemprop="faxNumber">(916)323-5400</span><br>
+                            </p>
                         </div>
+
+                        <div class="related-services m-t btn-row">
+                            <a href="" class="btn btn-default btn-xs">Renew Driver License</a>
+                            <a href="" class="btn btn-default btn-xs">Renew Vehicle Registration</a>
+                            <a href="" class="btn btn-default btn-xs">Release of Liability</a>
+                            <a href="" class="btn btn-default btn-xs">Name Change</a>
+                        </div>
+
+                        <ul class="list-inline list-unstyled m-t-md social">
+                            <li><a href=""><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter (DMV)</span></span></a></li>
+                            <li><a href=""><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook (DMV)</span></span></a></li>
+                            <li><a href=""><span class="ca-gov-icon-google-plus"><span class="sr-only">Google+ (DMV)</span></span></a></li>
+                        </ul>
+                    </div>
+
+                    <div class="third text-center">
+                        <img src="/sample/images/logo-dmv.png" class="img-responsive m-t-md" alt="Department of Motor Vehicles">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </div>
