--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -26,10 +26,10 @@
             <div class="quarter">
                 <h4>Support</h4>
                 <ul class="list-unstyled">
-                    <li><a href=""  class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Email</a></li>
-                    <li><a href=""  class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Feedback Survey</a></li>
-                    <li><a href=""  class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Technical Issues</a></li>
-                    <li ><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>&#43;1.800.807.6755</a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Email <span class="sr-only">Us</span></a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Feedback Survey</a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Technical Issues</a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>&#43;1.800.807.6755</a></li>
                 </ul>
                 <a href="#" class="btn btn-primary">Get Support</a>
             </div>
@@ -37,10 +37,10 @@
             <div class="quarter">
                 <h4>Awards</h4>
                 <ul class="list-unstyled">
-                    <li><a href="" class="btn btn-default btn-xs" ><span class="ca-gov-icon-check-line"></span>Best of the Web</a></li>
-                    <li><a href="" class="btn btn-default btn-xs" ><span class="ca-gov-icon-check-line"></span>Center for Digital Governement</a></li>
-                    <li><a href="" class="btn btn-default btn-xs" ><span class="ca-gov-icon-check-line"></span>NASCIO</a></li>
-                    <li><a href="" class="btn btn-default btn-xs" ><span class="ca-gov-icon-check-line"></span>Top Transparency</a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Best of the Web</a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Center for Digital Governement</a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>NASCIO</a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Top Transparency</a></li>
                 </ul>
                 <a href="#" class="btn btn-primary">All Awards</a>
             </div>
