Fixed navigation mobile controls and navigation megamenu sample pages accessibility errors

--- a/sample/modules/nav-megamenu-mobile-icons.html
+++ b/sample/modules/nav-megamenu-mobile-icons.html
@@ -1,24 +1,23 @@
 
-
 <nav id="navigation" class="main-navigation megadropdown auto-highlight">
-
     <!-- Add more mobile controls here. These will be in the top portion of the expanded menu when viewed on a mobile device  -->
-    <div class="mobile-controls">
+    <!-- mobile navigation begin -->
+    <div class="mobile-controls d-flex">
         <span class="mobile-control cagov-logo">
-            <span class="ca-gov-icon-logo" aria-hidden="false"></span><span class="sr-only">CA logo<</span>
+            <a href="#" class="m-x-sm"><span class="ca-gov-icon-logo" aria-hidden="false"></span><span class="sr-only">CA logo<</span></a>
         </span>
         <span class="mobile-control contact-link">
-            <span class="ca-gov-icon-chat" aria-hidden="true"></span><span class="sr-only">Contact</span>
+            <a href="#" class="m-x-sm"><span class="ca-gov-icon-chat" aria-hidden="true"></span><span class="sr-only">Live Chat</span></a>
         </span>
         <span class="mobile-control sample-link">
-            <span class="ca-gov-icon-capitol" aria-hidden="true"></span><span class="sr-only">Capitol Website</span>
+            <a href="#" class="m-x-sm"><span class="ca-gov-icon-capitol" aria-hidden="true"></span><span class="sr-only">Capitol Website</span></a>
         </span>
-        <span class="mobile-control-group mobile-menu-icons">
-            <span class="mobile-control sample-link"><span class="ca-gov-icon-state" aria-hidden="true"></span><span class="sr-only">California</span></span>
+        <span class="mobile-control sample-link">
+            <a href="#" class="m-x-sm"><span class="ca-gov-icon-state" aria-hidden="true"></span><span class="sr-only">California State</span></a>
         </span>
+
     </div>
 
-    <!-- mobile navigation begin -->
     <ul id="nav_list" class="top-level-nav">
 
         <li class="nav-item">
@@ -184,7 +183,7 @@
             <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
         </li>
         <li class="nav-item">
-            <a href="http://webstandards.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
+            <a href="http://webstandards.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>WebStandards</a>
         </li>
 
         <li class="nav-item">
