--- a/sample/colorscheme-sacramento.html
+++ b/sample/colorscheme-sacramento.html
@@ -309,7 +309,7 @@ Version 5.5.2
                                 </small>
                             </header>
 
-                            <a class="news-link" href="#">Read More</a>
+                            <a class="news-link" href="#">File for paid family leave insurance</a>
                         </article>
                         <!-- End Article -->
 
