Updated icons page

--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -12,7 +12,7 @@ Based on Twitter Bootstrap
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
 <!--[if (gt IE 9)]><!-->
 <html class="no-js" lang="en">
- <!--<![endif]-->
+<!--<![endif]-->
 
 <head>
     <!--
@@ -188,6 +188,11 @@ Based on Twitter Bootstrap
 
         .fs1 {
             font-size: 24px;
+        }
+
+        .icon-value {
+            font-size: 1rem;
+            margin: 0 !important;
         }
     </style>
 
