Fixed general landing page accessibility errors

--- a/general-landing.html
+++ b/general-landing.html
@@ -401,7 +401,7 @@
                 </div>
             </div>
 
-            <div class="section section-standout">
+            <div class="section bg-primary-standout-gradient">
                 <div class="container p-y-md">
 
 
