Fixed home page accessibility errors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Version 5.5.2
         Based on Twitter Bootstrap
     -->
     <meta charset="utf-8">
-    <title>DEV-Your Organization Name</title>
+    <title>California State Website Template (Version 5.5)</title>
     <meta name="Author" content="State of California" />
     <meta name="Description" content="State of California" />
     <meta name="Keywords" content="California, government" />
@@ -69,6 +69,7 @@ Version 5.5.2
 
 
 <div id="main-content" class="main-content">
+    <h1 class="sr-only">California State Website Template (Version 5.5)</h1>
     <!-- Include for optional slideshow banner -->
     <!--#include virtual="/ssi/header-single-banner.html" -->
     <main class="main-primary">
