--- a/sample/modules/icon-links.html
+++ b/sample/modules/icon-links.html
@@ -38,7 +38,7 @@
                 <div class="block-icon">
                     <span class="circle-icon ca-gov-icon-email" aria-hidden="true"></span>
                 </div>
-                Email Us
+                Email Us <span class="sr-only">Your Feedback</span>
             </a>
         </div>
     </div>
