--- a/serp.html
+++ b/serp.html
@@ -5,7 +5,7 @@
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
 <!--[if (gt IE 9)]><!-->
 <html class="no-js" lang="en">
- <!--<![endif]-->
+<!--<![endif]-->
 <head>
     <!--
     California State Template
@@ -58,7 +58,6 @@
 
             <div id="head-search" class="search-container">
                 <!-- Include Search -->
-                <!--#include virtual="/ssi/search.html" -->
             </div>
 
         </div>
@@ -71,8 +70,7 @@
         <main class="main-primary">
             <!--Search result section-->
             <div class="section section-default">
-                <div class="container search-results-header p-r-lg">
-                    <h1>Search Results</h1>
+                <div class="container search-results-header">
                     <!--Uncomment if you prefer to use original google search box. Be advided that original custom search box is not meeting WCAG accessibility standards. -->
                     <!--<gcse:searchbox-only resultsUrl="/serp.html" enableAutoComplete="true"></gcse:searchbox-only>-->
 
@@ -81,18 +79,19 @@
                         <input type="text" id="q" name="q" aria-labelledby="SearchInput" placeholder="Custom Search" class="w-100 height-50 border-0 p-x-sm" />
                         <button type="submit" class="pos-abs gsc-search-button right-0 top-0 width-50 height-50 border-0"><span class="ca-gov-icon-search font-size-30" aria-hidden="true"></span><span class="sr-only">Submit</span></button>
                     </form>
+
                 </div>
             </div>
             <div class="section">
                 <div class="container">
 
                     <gcse:searchresults-only></gcse:searchresults-only>
+                    <!-- <script src='//www.google.com/jsapi' type='text/javascript'></script> -->
                 </div>
             </div>
         </main>
 
     </div>
-
 
     <!--#include virtual="/ssi/global-footer.html" -->
     <!--#include virtual="/ssi/scripts.html" -->
